[project]
name = "oscar"
version = "0.1.0"
description = "compact Earth system model"
authors = [
    {name = "James Murdza", email = "james@jamesmurdza.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "xarray==2024.3.0",
    "netCDF4==1.6.5",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "matplotlib==3.8.4",
    "networkx==3.3",
    "pandas==2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.poetry]
package-mode = false
